# polypandas

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  roadmap.md
examples/: README.md  basic_usage.py  nested_structs.py
polypandas/: __init__.py  exceptions.py  factory.py  io.py  protocols.py  schema.py  testing.py
tests/: conftest.py  test_factory.py  test_io.py  test_nested_pyarrow.py  test_public_api.py  test_schema.py  test_testing_utils.py
