[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polypandas"
version = "0.1.0"
description = "Generate pandas DataFrames using polyfactory for testing and development"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Odos Matthews", email = "odosmatthews@gmail.com" }
]
keywords = ["pandas", "testing", "factory", "polyfactory", "dataframe", "mock-data", "pyarrow", "nested-structs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.3.0",
    "polyfactory>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
pyarrow = [
    "pyarrow>=14.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pydantic>=2.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/odosmatthews/polypandas"
Documentation = "https://github.com/odosmatthews/polypandas#readme"
Repository = "https://github.com/odosmatthews/polypandas"
Issues = "https://github.com/odosmatthews/polypandas/issues"

[tool.hatch.build.targets.wheel]
packages = ["polypandas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--cov=polypandas", "--cov-report=term-missing", "--cov-report=html"]

[tool.coverage.run]
source = ["polypandas"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
